--- a/VColon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/VColon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,7 +127,7 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Characters
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -143,13 +143,16 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Characters/CH_MyChar.CH_MyChar
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -423,18 +426,52 @@ REINST_CH_MyChar_C_99.Rendering=True
 REINST_CH_MyChar_C_99.Replication=True
 REINST_CH_MyChar_C_99.Input=True
 REINST_CH_MyChar_C_99.Actor=True
+BP_Sword_C.TransformCommon=True
+BP_Sword_C.Default=True
+BP_Sword_C.Rendering=True
+BP_Sword_C.Input=True
+BP_Sword_C.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Tonemapper=True
+PostProcessVolume.Mobile Tonemapper=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Interactables/Weapons/BP_Sword.BP_Sword;
 RecentlyPlaced=/Game/Characters/CH_MyChar.CH_MyChar;
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
+PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array.Array[0]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array.Array[0]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array.Array[0]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [RootWindow]
 ScreenPosition=X=128.000 Y=52.000
-WindowSize=X=1290.000 Y=730.000
+WindowSize=X=1310.000 Y=750.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -997,5 +1034,18 @@ BlueprintGraph.TimeStamp=2017.06.11-22.09.53
 BlueprintGraph.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2017.06.11-22.10.07
 ExternalImagePicker.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2017.06.11-22.10.16
+MaterialEditor.LastCompileMethod=Unknown
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
+[MaterialEditor]
+LightDir=P=-39.999985 Y=27.499968 R=0.000000
+PrimType=1
+
+[AssetEditorToolkitTabLocation]
+/Game/M_InteractHighlight.M_InteractHighlight=1
 
 
