--- a/VColon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/VColon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -495,6 +495,64 @@ K2Node_VariableGet.Events=True
 K2Node_MakeStruct.PinOptions=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Performance=True
+Button.Render Transform=True
+Button.Navigation=True
+Button.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+UI_InventoryItem_C.Default=True
+UI_InventoryItem_C.Appearance=True
+UI_InventoryItem_C.Interaction=True
+UI_InventoryItem_C.Input=True
+UI_InventoryItem_C.Designer=True
+UI_InventoryItem_C.Layout=True
+UI_InventoryItem_C.Behavior=True
+UI_InventoryItem_C.Performance=True
+UI_InventoryItem_C.Render Transform=True
+UI_InventoryItem_C.Navigation=True
+UserDefinedStruct.Structure=True
+UserDefinedStruct.DefaultValues=True
+BP_Base_Item_C.Tick=True
+BP_Base_Item_C.Default=True
+BP_Base_Item_C.Rendering=True
+BP_Base_Item_C.Replication=True
+BP_Base_Item_C.Input=True
+BP_Base_Item_C.Actor=True
+UI_InventoryType_C.Default=True
+UI_InventoryType_C.Appearance=True
+UI_InventoryType_C.Interaction=True
+UI_InventoryType_C.Input=True
+UI_InventoryType_C.Designer=True
+UI_InventoryType_C.Layout=True
+UI_InventoryType_C.Behavior=True
+UI_InventoryType_C.Performance=True
+UI_InventoryType_C.Render Transform=True
+UI_InventoryType_C.Navigation=True
+BP_Base_Interactable_C.Tick=True
+BP_Base_Interactable_C.Default=True
+BP_Base_Interactable_C.Rendering=True
+BP_Base_Interactable_C.Replication=True
+BP_Base_Interactable_C.Input=True
+BP_Base_Interactable_C.Actor=True
+REINST_CH_MyChar_C_405.None=True
+REINST_CH_MyChar_C_405.Tick=True
+REINST_CH_MyChar_C_405.Character=True
+REINST_CH_MyChar_C_405.Camera=True
+REINST_CH_MyChar_C_405.Pawn=True
+REINST_CH_MyChar_C_405.Rendering=True
+REINST_CH_MyChar_C_405.Replication=True
+REINST_CH_MyChar_C_405.Input=True
+REINST_CH_MyChar_C_405.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Interactables/Weapons/BP_Sword.BP_Sword;
@@ -502,15 +560,25 @@ RecentlyPlaced=/Game/Characters/CH_MyChar.CH_MyChar;
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array.Array[0]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array.Array[0]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array.Array[0]\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Button="\"Object.Appearance.ColorAndOpacity\" "
+ContentWidget="\"Object.Appearance.ColorAndOpacity\" "
+PanelWidget="\"Object.Appearance.ColorAndOpacity\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" "
+UI_InventoryItem_C=
+UserWidget="\"Object.Appearance.ColorAndOpacity\" "
+UI_InventoryType_C="\"Object.Appearance.ColorAndOpacity\" "
 
 [RootWindow]
-ScreenPosition=X=469.000 Y=189.000
-WindowSize=X=1330.000 Y=770.000
+ScreenPosition=X=617.000 Y=138.000
+WindowSize=X=1350.000 Y=790.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1090,6 +1158,13 @@ PrimType=1
 /Game/M_InteractHighlight.M_InteractHighlight=1
 /Game/UI/UI_Inventory.UI_Inventory=0
 /Game/Characters/CH_MyChar.CH_MyChar=0
+/Game/Interactables/ItemTypeInfo.ItemTypeInfo=0
+/Game/Interactables/ItemInfo.ItemInfo=0
+/Game/Interactables/BP_Base_Item.BP_Base_Item=0
+/Game/Interactables/BPI_Inventory.BPI_Inventory=0
+/Game/Interactables/BP_Base_Interactable.BP_Base_Interactable=0
+/Game/UI/UI_InventoryItem.UI_InventoryItem=0
+/Game/UI/UI_InventoryType.UI_InventoryType=0
 
 [MessageLog]
 LastLogListing=LoadErrors
